--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
 
   flutter:
     sdk: flutter
-  sqflite: ^2.2.7+1
+  sqflite: ^2.3.3+1
   path: ^1.8.3
+  intl: ^0.19.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
